tests/rosetta/out/C/almost-prime.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:41Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:41Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
int kPrime(int n, int k) {
  int nf = 0;
  int i = 2;
  while (i <= n) {
    while (n % i == 0) {
      if (nf == k) {
        return 0;
      }
      nf = nf + 1;
      n = ((double)n) / ((double)i);
    }
    i = i + 1;
  }
  return nf == k;
}

list_int gen(int k, int count) {
  list_int r = list_int_create(0);
  int n = 2;
  while ((0 < count)) {
    if (kPrime(n, k)) {
      r = 0;
    }
    n = n + 1;
  }
  return r;
}

int main() {
  int k = 1;
  while (k <= 5) {
    char *tmp1 = _str(k);
    char *tmp2 = concat_string(tmp1, " ");
    char *tmp3 = _str(gen(k, 10));
    char *tmp4 = concat_string(tmp2, tmp3);
    printf("%s\n", tmp4);
    k = k + 1;
  }
}

int main() {
  main();
  return 0;
}
